Updated INFO page

--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -29,17 +29,11 @@
             <div class="card-container-basic">
                 <div class="settingsHeader">Wi-PWN</div>
                 <div class="card-basic">
-                    This project is licensed under Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0). See the <a href="license">license file</a> for details.
-                    <br> The source code is available on <a href="https://github.com/spacehuhn/esp8266_deauther" target="_blank">GitHub</a>.
-                    <br>
-                    <br> Use it only for testing or educational purposes on your own devices!
-                    <br>
-                    <br>
-                    <b>Referring to this project as "jammer" is prohibited! Name the project by its correct name.</b>
-                    <br>
-                    <br>
-                    <br>
-                    <b style="font-size: 1.1em"><a href="https://github.com/spacehuhn" target="_blank">@spacehuhn</a> (Stefan Kremser)<br>
+                    This project is licensed under the <a href="https://creativecommons.org/licenses/by-nc/4.0/"><i title="CC BY-NC 4.0"> Creative Commons Attribution-NonCommercial 4.0 license.</i></a><br><br>
+                    <b>This software is intended for trained professionals!</b>
+                    <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i><hr>
+                    Wi-PWN is updated and maintained by:<br>
+                    <b style="font-size: 1.1em"><a href="https://github.com/spacehuhn" target="_blank">
                     <a href="https://github.com/spacehuhn" target="_blank">@samdenty99</a> (Sam Denty)</b>
                     <br>
                 </div>
@@ -47,21 +41,22 @@
             <div class="card-container-basic">
                 <div class="settingsHeader">Contributors</div>
                 <div class="card-basic">
-                    <a href="https://github.com/andrbmgi" target="_blank">@andrbmgi</a>
-                    <br>
+                    <a href="https://github.com/spacehuhn/esp8266_deauther"><b>@spacehuhn</a> (Stefan Kremser)</b><br>
                     <a href="https://github.com/N0vaPixel" target="_blank">@N0vaPixel</a> (Aur&eacute;lien Hernandez)
-                    <br>
-                    <a href="https://github.com/tobozo" target="_blank">@tobozo</a>
                     <br>
                     <a href="https://github.com/SaltyViper" target="_blank">@SaltyViper</a>
                     <br>
-                    <a href="https://github.com/ajnavarro" target="_blank">@ajnavarro</a> (Antonio Navarro Perez)
+                    <a href="https://github.com/tobozo" target="_blank">@tobozo</a>
+                    <br>
+                    <a href="https://github.com/andrbmgi" target="_blank">@andrbmgi</a>
+                    <br>
+                    <a href="https://github.com/SamuelKlit" target="_blank">@SamuelKlit</a> (Samuel KS)
                     <br>
                     <a href="https://github.com/schinfo" target="_blank">@schinfo</a> (Helmut)
                     <br>
-                    <a href="https://github.com/SamuelKlit" target="_blank">@SamuelKlit</a> (Samuel KS)
+                    <a href="https://github.com/ajnavarro" target="_blank">@ajnavarro</a> (Antonio Navarro Perez)
                     <br><br><div class="divider"></div><br>
-                    For more information go to <a href="https://github.com/spacehuhn/esp8266_deauther/graphs/contributors">contributors</a> on the GitHub page.
+                    For more information go to <a href="https://github.com/samdenty99/Wi-PWN/graphs/contributors">contributors page</a> on GitHub.
                 </div>
             </div>
             <div class="card-container-basic">
