--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -29,8 +29,8 @@
                 <div class="card-basic">
                     <div id="logo-img2"></div>
                     <h1>Welcome to Wi-PWN</h1>
-                    <hr class="small"><b>This software is intended for use with trained professionals!</b>
-                    <br>It can perform deauth attack on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i>
+                    <hr class="small"><b>This software is intended for trained professionals!</b>
+                    <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i>
                     <p>Only use this software on networks you have sole permission to use it on.</p>
                     <p>
                     <b>By clicking <a>Accept</a> you agree to the terms and conditions</b>
