--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -1,6 +1,6 @@
 <head>
     <title>Attack - Wi-PWN</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="dark.css">
     <meta name="theme-color" content="#1976d2">
