--- a/web_server/html/error.html
+++ b/web_server/html/error.html
@@ -12,7 +12,7 @@
             <div id="logo-img"></div><b style="color:#fff">Wi-</b>PWN
         </div>
         <div id="links">
-            <a href="scan.html">Scan</a>
+            <a href="/">Scan</a>
             <a href="users.html">Users</a>
             <a href="attack.html">Attack</a>
             <a href="settings.html">Settings</a>
