Bug fixes + Integrated spacehuhn/deauth_detector

--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -45,16 +45,16 @@
             <div class="card-container-basic">
                 <div class="settingsHeader">Add SSID</div>
                 <div class="card-basic">
-                    <div class="row" style="margin-bottom: 20px;">
+                    <div class="row inputCheckbox">
                     <div class="col-6">
                         <div class="input-container" id="ssidContainer">
                             <input placeholder=" " id="ssid" required="" type="text" minlength="1" maxlength="32">
                             <label for="ssid">SSID</label>
                         </div>
                     </div>
-                    <div class="col-6" style="margin-top:17px">
+                    <div class="col-6">
                         <input type="checkbox" name="randSSID" id="randSSID" value="false">
-                        <label class="checkbox" for="randSSID" style="margin-top:3px;float:left;margin-right:10px"></label>
+                        <label class="checkbox" for="randSSID"></label>
                         <label for="randSSID">Generate random</label>
                     </div>
                     </div>
