--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -33,8 +33,8 @@
                     <b>This software is intended for trained professionals!</b>
                     <br>It can perform deauth attacks on unprotected <i>802.11</i> Wi-Fi networks, <i>which could be perceived as using an illegal 'Wi-Fi Jammer'.</i><hr>
                     Wi-PWN is updated and maintained by:<br>
-                    <b style="font-size: 1.1em"><a href="https://github.com/spacehuhn" target="_blank">
-                    <a href="https://github.com/spacehuhn" target="_blank">@samdenty99</a> (Sam Denty)</b>
+                    <b style="font-size: 1.1em">
+                    <a href="https://mirum.weebly.com/samuel-denty" target="_blank">@samdenty99</a> (Sam Denty)</b>
                     <br>
                 </div>
             </div>
