Minor UI Updates

--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -33,16 +33,12 @@
             </div>
             <div id="selectedNetworksDevices" class="card-container-basic dn">
                 <div class="settingsHeader">Selected networks &amp; users</div>
-                <div class="card-basic">
-                    <ul id="selectedAPs">
-                    </ul>
-                    <div id="users" class="dn">
-                        <ul id="selectedClients">
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="card-container-basic">
+                <table id="selectedAPs">
+                </table>
+                <table id="selectedClients" class="dn">
+                </table>
+            </div><br>
+            <div class="card-container-basic" id="section2">
                 <div class="settingsHeader">Add SSID</div>
                 <div class="card-basic">
                     <div class="row inputCheckbox">
