UX improvements & bug fixes

--- a/android_app/app/src/main/assets/404.html
+++ b/android_app/app/src/main/assets/404.html
@@ -84,5 +84,5 @@
         Make sure that you are connected to the <code>Wi-PWN</code> network and try again.
     </p>
 </div>
-<button onclick="location.href = 'http://192.168.4.1/scan.html?minimal=true'">Retry</button>
+<button onclick="location.href = 'http://192.168.4.1/?minimal=true'">Retry</button>
 </body>
