--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -37,7 +37,7 @@
                 </table>
                 <table id="selectedClients" class="dn">
                 </table>
-            </div><br>
+            </div>
             <div class="card-container-basic" id="section2">
                 <div class="settingsHeader">Add SSID</div>
                 <div class="card-basic">
