--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -29,7 +29,7 @@
             <div class="card-container-basic">
                 <div class="settingsHeader button-header-2" style="display:inline-block;margin-bottom: 30px">Scan for Wi-Fi users <span id="clientsFound"></span></div>
                 <button onclick="scan()" id="startScan" class="button-primary right button-header-2">Scan</button>
-                <table id="users"><tr><th>&nbsp;</th></tr></table>
+                <table id="users"></table>
                 <hr>
                 <div id="saved-users" class="dn">
                     <div class="settingsHeader button-header" style="display:inline-block;margin-bottom: 30px">Saved users <span id="clientNames"></span></div>
