--- a/web_server/html/setup.html
+++ b/web_server/html/setup.html
@@ -38,7 +38,7 @@
                                 </div>
                                 <div class="col-6">
                                     <div class="input-container">
-                                        <input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32">
+                                        <input placeholder=" " id="password" type="text" required="" minlength="8" maxlength="32" value="rootaccess">
                                         <label for="ssid">Password</label>
                                     </div>
                                 </div>
