--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <button onclick="scan()" id="apScanStart" class="right button-primary button-header">Scan</button>
-                <table id="apscan"><tr><th><input type="checkbox" name="selectAll" id="selectAll" class="dn"></th></tr></table>
+                <table id="apscan"></table>
                 <div class="row">
                         <button class="secondary" onclick="window.location = 'users.html'">Users</button>
                         <button onclick="window.location = 'attack.html'" class="right">Attack</button>
