Added auto_generator for arrays

--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -46,6 +46,8 @@
                     <br>
                     <a href="https://github.com/SaltyViper" target="_blank">@SaltyViper</a>
                     <br>
+                    <a href="https://github.com/ericktedeschi" target="_blank">@ericktedeschi</a> (Erick Belluci Tedeschi)
+                    <br>
                     <a href="https://github.com/tobozo" target="_blank">@tobozo</a>
                     <br>
                     <a href="https://github.com/andrbmgi" target="_blank">@andrbmgi</a>
