--- a/web_server/html/error.html
+++ b/web_server/html/error.html
@@ -18,9 +18,8 @@
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
-        <div id="error"></div>
     </nav>
-    <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal");</script>
+    <script>/(^|;)\s*minimal=/.test(document.cookie)&&(document.body.id="minimal")</script>
     <div class="main-wrap">
         <div id="spinner-container"></div>
         <div class="container">
@@ -32,6 +31,7 @@
                 </div>
             </div>
         </div>
+        <div id="notification"></div>
         <footer></footer>
     </div>
     <script src="js/functions.js"></script>
