--- a/web_server/html/index.html
+++ b/web_server/html/index.html
@@ -18,7 +18,6 @@
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
-        <div id="error"></div>
     </nav>
     <script>
     var u = window.location.href; - 1 != u.indexOf("?minimal=true") && (document.body.id = "minimal", document.cookie = "minimal=true");
@@ -42,6 +41,7 @@
                 </div>
             </div>
         </div>
+        <div id="notification"></div>
         <footer></footer>
     </div>
     <script src="js/functions.js"></script>
