--- a/web_server/html/attack.html
+++ b/web_server/html/attack.html
@@ -18,7 +18,6 @@
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
-        <div id="error"></div>
     </nav>
     <script>
     /(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal");
@@ -78,9 +77,9 @@
                 </table>
                 <br>
                 <button class="button-primary right" onclick="saveSSID()">save</button><br>
-                <span id="saved"></span>
             </div>
         </div>
+        <div id="notification"></div>
         <footer></footer>
         <script src="js/functions.js"></script>
         <script src="js/attack.js"></script>
