--- a/web_server/html/info.html
+++ b/web_server/html/info.html
@@ -18,7 +18,6 @@
             <a href="settings.html">Settings</a>
             <a class="right active" href="info.html">Info</a>
         </div>
-        <div id="error"></div>
     </nav>
     <script>
     /(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal");
@@ -80,6 +79,7 @@
                 </div>
             </div>
         </div>
+        <div id="notification"></div>
         <footer></footer>
         <script src="js/functions.js"></script>
 </body>
