--- a/web_server/html/settings.html
+++ b/web_server/html/settings.html
@@ -18,7 +18,6 @@
             <a href="settings.html" class="active">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
-        <div id="error"></div>
     </nav>
     <script>
     /(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal");
@@ -149,11 +148,12 @@
                     </div>
                 </div>
             </div>
-                        <div class="card-container-basic">
-            <button onclick="resetSettings()">Reset</button>
-            <button class="button-primary right" onclick="saveSettings()">save</button>
+            <div class="card-container-basic">
+              <button onclick="resetSettings()">Reset</button>
+              <button class="button-primary right" onclick="saveSettings()">save</button>
             </div>
         </div>
+        <div id="notification"></div>
         <footer></footer>
         <script src="js/functions.js"></script>
         <script src="js/settings.js"></script>
