--- a/web_server/html/users.html
+++ b/web_server/html/users.html
@@ -18,7 +18,6 @@
             <a href="settings.html">Settings</a>
             <a class="right" href="info.html">Info</a>
         </div>
-        <div id="error"></div>
     </nav>
     <script>
     /(^|;)\s*minimal=/.test(document.cookie) && (document.body.id = "minimal");
@@ -53,6 +52,7 @@
                 </div>
             </div>
         </div>
+        <div id="notification"></div>
         <footer></footer>
         <script src="js/functions.js"></script>
         <script src="js/users.js"></script>
